<resources>
    <string name="app_name">Mood Journal</string>
    <string name="accessibility_service_description">Mood Journal will now be able to receive your phone interaction events such as click, back, home.</string>
    <string name="title_activity_consent">Consent Form</string>
    <string name="title_activity_personality_test">Personality Test</string>
    <string name="title_activity_app_usage_permission">App Usage Permission</string>
    <string name="title_activity_nsl_permission">Notification Permission</string>
    <string name="title_activity_accessibility_permission">Accessibility Permission</string>
    <string name="title_activity_mood_questionnaire">Mood Questionnaire</string>
    <string name="title_activity_wellbeing_questionnaire">Well-being Questionnaire</string>
    <string name="title_activity_create_plan">Setting a Plan</string>
    <string name="title_activity_gcs_test">Goal Commitment Scale Test</string>
    <string name="title_activity_srbai_test">SRBAI Test</string>
    <string name="title_activity_mood_report">Mood Report</string>
    <string name="open_accessibility_settings">Allow Accessibility Access</string>
    <string name="open_app_settings">Allow App Usage Access</string>
    <string name="open_nls_settings">Allow Notification Access</string>
    <string name="open_ask_runtime_permissions">Allow Permissions</string>
    <string name="accessibility_permission_revoked_message_part1">Permission required to access interaction with phone.</string>
    <string name="accessibility_permission_revoked_message_part2">We do not collect any sensitive data. We just use this to infer interaction with phone.</string>
    <string name="accessibility_permission_revoked_message_part3">Click the button below to open your accessibility settings page. 
        Once you\'re there, enable/reset the app permission and click back button.</string>
    <string name="app_permission_revoked_message_part1">Permission required to access interaction with apps.</string>
    <string name="app_permission_revoked_message_part2">We just use this to infer acceptance and dismissal of a notification by checking if the corresponding app was launched.</string>
    <string name="app_permission_revoked_message_part3">Click the button below to open your app settings page. 
        Once you\'re there, enable/reset the app permission and click back button.</string>
    <string name="nsl_permission_revoked_message_part1">Permission required</string>
    <string name="nsl_permission_revoked_message_part2">We do not collect any sensitive data and all data are anonymised.</string>
    <string name="nsl_permission_revoked_message_part3">Click the button below to open your notification settings page. 
        Once you\'re there, enable/reset the app permission and click back button.</string>
    <string name="consent_statement">
        Mood Journal helps you to keep track of your mood everyday. The app will trigger one mood related questionnaire every day.
        All the personal information will be anonymised, securely transmitted and stored on the server.
        No additional information related to contacts \(telephone numbers, email addresses etc.\) on your device
        or history of communication made with the contact would be collected by the application.
        The app is developed to collect data for research at University of Birmingham.
        
        \n\n
        
        By agreeing to the consent below, I confirm that I am over 18 years of age and allow the app to collect
        my data. I also confirm that I am the sole prominent user of this device. I understand that
        access to any data collected will only be allowed to me and the researchers team at University of Birmingham.
        Any published results of this study will only refer to anonymised and obfuscated data, and 
        aggregated statistics that do not reveal the identities of the participants. As a participant, 
        I have the right to opt out of the data collection at any time during this experiment by uninstalling 
        the application. Moreover, I have the right to access any information in the data set related 
        to me, and request for any part of that data to be removed.</string>
    <string name="registration_hint">Complete these details to continue.</string>
    <string name="consent_button_label">Submit</string>
    <string name="ok_string">OK</string>
    <string name="todays_mood_q_stats_label">Today\'s Mood</string>
    <string name="todays_mood_q_stats_empty_state">You have not tracked your mood for today.</string>
    <string name="todays_mood_q_stats_tracked">Good job! You have tracked your mood for today. You can do it again tomorrow.</string>
    <string name="answer_mood_q_btn_label">Track my mood</string>
    <string name="personality_test_header">Question 1 of 50</string>
    <string name="personality_test_results_header">Your Personality Test Results</string>
    <string name="personality_test_results_explained_title">Personality Traits</string>
    <string name="personality_test_results_explained">
        <b>Extroversion (E)</b> is the personality trait of seeking fulfillment from sources outside the
        self or in community. High scorers tend to be very social while low scorers prefer to work on their projects alone.\n\n

        <b>Agreeableness (A)</b> reflects much individuals adjust their behavior to suit others.
        High scorers are typically polite and like people. Low scorers tend to \'tell it like it is\'.\n\n

        <b>Conscientiousness (C)</b> is the personality trait of being honest and hardworking.
        High scorers tend to follow rules and prefer clean homes. Low scorers may be messy and cheat others.\n\n

        <b>Neuroticism</b> (N) is the personality trait of being emotional.\n\n

        <b>Openness (O)</b> is the personality trait of seeking new experience and intellectual
        pursuits. High scores may day dream a lot. Low scorers may be very down to earth.\n\n
    </string>
    <string name="personality_type">Quality</string>
    <string name="personality_type_extraversion">Extraversion</string>
    <string name="personality_type_agreeableness">Agreeableness</string>
    <string name="personality_type_conscientiousness">Conscientiousness</string>
    <string name="personality_type_neuroticism">Neuroticism</string>
    <string name="personality_type_openness">Openness</string>
    <string name="personality_test_info_string">You cannot go back to change your answer. It is not mandatory to completely the test in one go.
        So, take your time and try to answer the questions as accurate as possible.
        
        \n\n 
        Note that this test uses the Big-Five Factor Markers from the International Personality Item Pool, developed 
        by Goldberg (1992). These big five personality traits that are most commonly used model of personality in 
        academic psychology. 
        
        Thank you! </string>
    <string-array name="personality_test_questions">
        <item>I am the life of the party.</item>
        <item>I feel little concern for others.</item>
        <item>I am always prepared.</item>
        <item>I get stressed out easily.</item>
        <item>I have a rich vocabulary.</item>
        <item>I don\'t talk a lot.</item>
        <item>I am interested in people.</item>
        <item>I leave my belongings around.</item>
        <item>I am relaxed most of the time.</item>
        <item>I have difficulty understanding abstract ideas.</item>
        <item>I feel comfortable around people.</item>
        <item>I insult people.</item>
        <item>I pay attention to details.</item>
        <item>I worry about things.</item>
        <item>I have a vivid imagination.</item>
        <item>I keep in the background.</item>
        <item>I sympathize with others\' feelings.</item>
        <item>I make a mess of things.</item>
        <item>I seldom feel blue.</item>
        <item>I am not interested in abstract ideas.</item>
        <item>I start conversations.</item>
        <item>I am not interested in other people\'s problems.</item>
        <item>I get chores done right away.</item>
        <item>I am easily disturbed.</item>
        <item>I have excellent ideas.</item>
        <item>I have little to say.</item>
        <item>I have a soft heart.</item>
        <item>I often forget to put things back in their proper place.</item>
        <item>I get upset easily.</item>
        <item>I do not have a good imagination.</item>
        <item>I talk to a lot of different people at parties.</item>
        <item>I am not really interested in others.</item>
        <item>I like order.</item>
        <item>I change my mood a lot.</item>
        <item>I am quick to understand things.</item>
        <item>I don\'t like to draw attention to myself.</item>
        <item>I take time out for others.</item>
        <item>I shirk my duties.</item>
        <item>I have frequent mood swings.</item>
        <item>I use difficult words.</item>
        <item>I don\'t mind being the center of attention.</item>
        <item>I feel others\' emotions.</item>
        <item>I follow a schedule.</item>
        <item>I get irritated easily.</item>
        <item>I spend time reflecting on things.</item>
        <item>I am quiet around strangers.</item>
        <item>I make people feel at ease.</item>
        <item>I am exacting in my work.</item>
        <item>I often feel blue.</item>
        <item>I am full of ideas.</item>
    </string-array>
    <string name="phq_test_header">Question 1 of 8</string>
    <string name="phq_test_info">Over the last two weeks, how often have you been bothered by any of the following problems?</string>
    <string name="phq_test_option_not_at_all">Not at all</string>
    <string name="phq_test_option_several_days">Several days</string>
    <string name="phq_test_option_more_than_half_days">More than half days</string>
    <string name="phq_test_option_nearly_every_day">Nearly every day</string>
    <string name="srbai_header">Question 1 of 4</string>
    <string name="srbai_instruction">Please answer the following questions by choosing the right scale that
        represents your perception towards completing a mood tracking task as your activity.</string>
    <string name="five_scale_option_disagree">Strongly disagree</string>
    <string name="five_scale_option_somewhat_disagree">Disagree</string>
    <string name="five_scale_option_neither_agree_nor_disagree">Neither agree nor disagree</string>
    <string name="five_scale_option_somewhat_agree">Agree</string>
    <string name="five_scale_option_agree">Strongly agree</string>
    <string name="seven_scale_option_disagree">Disagree</string>
    <string name="seven_scale_option_somewhat_disagree">Somewhat disagree</string>
    <string name="seven_scale_option_neither_agree_nor_disagree">Neither agree nor disagree</string>
    <string name="seven_scale_option_somewhat_agree">Somewhat agree</string>
    <string name="seven_scale_option_agree">Agree</string>
    <string name="seven_scale_option_strongly_agree">Strongly agree</string>
    <string name="nsl_permission_rationale">Please enable permission requests for read/write access to local storage. We need read/write access permission to store the data in your phone, before transmitting securely into our server.</string>
</resources>