<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_questionnaire_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/personality_test_header"
        android:textAllCaps="true"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg_options"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rg_option_disagree"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/five_scale_option_disagree"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rg_option_somewhat_disagree"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/five_scale_option_somewhat_disagree"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rg_option_neither_agree_nor_disagree"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/five_scale_option_neither_agree_nor_disagree"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rg_option_somewhat_agree"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/five_scale_option_somewhat_agree"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rg_option_agree"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/five_scale_option_agree"
                android:textSize="14sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/control_btn_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:onClick="onControlBtnClick"
            android:text="Next"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>